[package]
name = "solana-trader-client-rust"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "mode-grpc-fast"
path = "src/mode_grpc_fast.rs"
[[bin]] # Bin to run the HelloWorld gRPC client
name = "mode-grpc-sandwichMitigation"
path = "src/mode_grpc_sandwichMitigation.rs"
[[bin]] # Bin to run the HelloWorld gRPC client
name = "mode-http-fast"
path = "src/mode_http_fast.rs"
[[bin]] # Bin to run the HelloWorld http client
name = "mode-http-sandwichMitigation"
path = "src/mode_http_sandwichMitigation.rs"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

solana-client = "2.2.1"
solana-program = "2.2.1"
solana-sdk = "2.2.1"
solana-system-interface = "1"

base64 = "0.21"
bincode = "1.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.13"